--- a/app/src/style/style.scss
+++ b/app/src/style/style.scss
@@ -15,3 +15,7 @@
     background-color: rgba(86, 61, 124, .15);
     border: 1px solid rgba(86, 61, 124, .2);
 }
+
+/* .task {
+    background-color: azure;
+} */
